--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/robbinfellow/v-siema.git"
+    "url": "git+https://github.com/robbinfellow/v-siema.git"
   },
   "keywords": [
     "vue",
